--- a/web/admin.html
+++ b/web/admin.html
@@ -1,135 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Gateway Admin</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
+  <meta charset="UTF-8" />
+  <script src="js/auth.js"></script> <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Panel - Sensor Gateway</title>
 
-    .container {
-      max-width: 900px;
-      margin: 30px auto;
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
-.navbar {
-  background-color: #007bff;
-  padding: 8px 12px;
-  border-radius: 6px;
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: flex-start; /* can trái */
-  align-items: center;
-}
-
-.navbar a {
-  color: white;
-  margin-right: 20px;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 14px;
-}
-
-.navbar a:hover {
-  text-decoration: underline;
-}
-
-    h2 {
-      margin-top: 0;
-      text-align: center;
-    }
-
-    .button-group {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    button {
-      padding: 6px 12px;
-      margin: 5px;
-      border: none;
-      background-color: #007bff;
-      color: white;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    textarea {
-      width: 100%;
-      height: 300px;
-      font-family: monospace;
-      font-size: 13px;
-      background: #111;
-      color: #0f0;
-      padding: 10px;
-      border-radius: 6px;
-      resize: vertical;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <div class="container">
-    <!-- Navbar inside content box -->
-    <div class="navbar">
-      <a href="index.html">Dashboard</a>
-      <a href="admin.html">Advanced Config</a>
+  <aside class="sidebar">
+    <h1><i class="fas fa-shield-halved"></i> Admin</h1>
+    
+    <a href="index.html" class="nav-item"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+    <a href="admin.html" class="nav-item active"><i class="fas fa-cog"></i> Advanced Config</a>
+
+    <div class="sidebar-footer">
+        <div class="nav-item" id="darkModeToggle">
+            <i class="fas fa-moon"></i>
+            <span>Dark Mode</span>
+        </div>
+    </div>
+  </aside>
+
+  <main class="main-content">
+    <div id="toastContainer"></div>
+
+    <header class="main-header">
+        <h2 id="roomTitle">Advanced Configuration Panel</h2>
+    </header>
+
+    <div class="content-card">
+        <h3>Node Controls</h3>
+        <div class="button-group">
+            <button onclick="runNode(15)">Run Node 15</button>
+            <button onclick="runNode(21)">Run Node 21</button>
+        </div>
     </div>
 
-    <h2>Sensor Gateway - Admin Panel</h2>
+    <div class="content-card">
+        <h3>System Log</h3>
+        
+        <div class="log-controls">
+            <div class="search-bar">
+                <input type="text" id="searchInput" placeholder="Search logs...">
+                <button onclick="searchLogs()"><i class="fas fa-search"></i></button>
+            </div>
+            <div class="filter-bar">
+                <select id="logLevelFilter" onchange="filterLogs()">
+                    <option value="">All Levels</option>
+                    <option value="INFO">INFO</option>
+                    <option value="WARN">WARN</option>
+                    <option value="ERROR">ERROR</option>
+                    <option value="RAW">RAW</option>
+                </select>
+            </div>
+            <div class="action-bar">
+                <div class="auto-refresh-toggle">
+                    <span>Auto-Refresh</span>
+                    <label class="switch">
+                        <input type="checkbox" id="autoRefreshToggle" onchange="toggleAutoRefresh(this.checked)">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <a href="/download-log" class="button-download" download><i class="fas fa-download"></i> Download Log</a>
+            </div>
+        </div>
 
-    <div class="button-group">
-      <button onclick="loadLog()">Load Log</button>
-      <button onclick="runNode(15)">Run Node 15</button>
-      <button onclick="runNode(21)">Run Node 21</button>
+        <div class="log-container">
+            <table class="log-table">
+                <thead>
+                    <tr>
+                        <th style="width: 25%;">Timestamp</th>
+                        <th style="width: 10%;">Level</th>
+                        <th style="width: 20%;">Component</th>
+                        <th style="width: 45%;">Message</th>
+                    </tr>
+                </thead>
+                <tbody id="logTableBody"></tbody>
+            </table>
+        </div>
+
+        <div id="paginationControls" class="pagination-controls"></div>
     </div>
+</main>
 
-    <textarea id="logArea" readonly></textarea>
-  </div>
-
-  <script>
-    async function loadLog() {
-    try {
-      const res = await fetch('/log');
-      const logText = await res.text();  // ? CH?NH ÐO?N NÀY
-      document.getElementById('logArea').value = logText;
-    } catch (err) {
-      document.getElementById('logArea').value = 'Error loading log: ' + err;
-    }
-  }
-
-  async function runNode(id) {
-    const res = await fetch('/run-node', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ sensor_id: id })
-    });
-    const result = await res.json();
-    alert(result.status || result.error);
-  }
-
-    async function runNode(id) {
-      const res = await fetch('/run-node', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ sensor_id: id })
-      });
-      const result = await res.json();
-      alert(result.status || result.error);
-    }
-  </script>
+  <script src="js/app.js"></script>
+  <script src="js/admin.js"></script>
 </body>
 </html>
